<resources>
    <string name="app_name">MyProfile</string>
    <string name="setting">Settings</string>
    <string name="profile_view_my_contacts">View my contacts</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="profile_image_description">Profile image</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_welcome">"Welcome !"</string>
    <string name="register_description">Fill out the profile and go to the application!</string>
    <string name="register_label">Let\'s get acquainted</string>
    <string name="register_button_signup">Register</string>
    <string name="register_sign_in">Sign In</string>
    <string name="register_already_have_an_account">Already have an account?</string>
    <string name="register_terms_and_conditions">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="auth_hint_email" translatable="false">E-mail</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_remember_me">Remember me</string>
    <string name="profile_name" translatable="false">%1$s %2$s</string>
    <string name="main_home_address">Home Address</string>
    <string name="main_career">Career</string>
    <string name="error_required">Required field!</string>
    <string name="error_incorrect_email">Incorrect E-mail address!</string>
    <string name="error_short_password">Password must be at least %1$d symbols!</string>
    <string name="error_big_password">Password can\'t be more than %1$d symbols!</string>
    <string name="error_incorrect_phone_number">Incorrect phone number</string>
    <string name="toolbar_contact_search">Search…</string>
    <string name="contacts_add_contacts">Add Contacts</string>
    <string name="contacts_title">Contacts</string>
    <string name="edit_button_save">SAVE</string>
    <string name="edit_hint_username">Username*</string>
    <string name="edit_hint_username_example">Enter your name and surname</string>
    <string name="edit_hint_career">Career</string>
    <string name="edit_hint_career_example">What\'s your job?</string>
    <string name="edit_hint_email" translatable="false">Email</string>
    <string name="edit_hint_phone">Phone*</string>
    <string name="edit_hint_phone_example" translatable="false">(264)-654-3762</string>
    <string name="edit_hint_address">Address</string>
    <string name="edit_hint_date_of_birth">Date of birth</string>
    <string name="edit_email_hint" translatable="false">name@gmail.com</string>
    <string name="edit_hint_instagram" translatable="false">Instagram</string>
    <string name="edit_hint_facebook" translatable="false">Facebook</string>
    <string name="edit_hint_twitter" translatable="false">Twitter</string>
    <string name="edit_hint_linkedin" translatable="false">Linkedin</string>
    <string name="edit_hint_socials_username">Your username here</string>
    <string name="edit_action_settings">Settings</string>
    <string name="edit_why_need_permissions">Need media permissions for loading photo</string>
    <string name="custom_login_view_text_google" translatable="false">Google</string>
    <string name="detail_message">Message</string>
    <string name="detail_transition_photo" translatable="false">image %1$s</string>
    <string name="detail_transition_name" translatable="false">name %1$s</string>
    <string name="detail_transition_career" translatable="false">career %1$s</string>
    <string name="toast_contact_removed">Contact has been removed</string>
    <string name="contact_selection">Selected: %1$d</string>
    <string name="main_pager_contacts">Contacts</string>
    <string name="main_pager_profile">Profile</string>
    <string name="main_toolbar_logout">Logout</string>
    <string name="contact_add_denied_camera_permissions">Access to media denied. Go to settings and add media permissions</string>
    <string name="login_label">Hello!</string>
    <string name="login_button">Login</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_subtitle">Enter your email and password below</string>
    <string name="login_forgot_pass">Forgot your password?</string>
    <string name="login_no_account">Don\'t have account?</string>
    <string name="error_bad_server_response">Bad server response. Try again later</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_try_again">Error. Try again</string>
    <string name="error_user_exist">User already exists</string>
    <string name="error_authorization">Authorization error, please login again</string>
    <string name="error_invalid_credentials">Email or password not valid</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_unknown">Unknown error</string>
    <string name="socials_twitter_app" translatable="false">twitter://user?screen_name=%1$s</string>
    <string name="socials_twitter_browser" translatable="false">https://twitter.com/%1$s</string>
    <string name="socials_facebook_app" translatable="false">fb://facewebmodal/f?href=%1$s</string>
    <string name="socials_facebook_browser" translatable="false">https://www.facebook.com/%1$s</string>
    <string name="socials_linkedin_app" translatable="false">linkedin://%1$s</string>
    <string name="socials_linkedin_browser" translatable="false">https://www.linkedin.com/in/%1$s</string>
    <string name="socials_instagram_app" translatable="false">https://instagram.com/_u/%1$s</string>
    <string name="socials_instagram_browser" translatable="false">https://instagram.com/%1$s</string>
</resources>