<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <View
            android:id="@+id/photoAreaBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/background"
            app:layout_constraintBottom_toTopOf="@+id/glEndPhotoArea"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUserPhoto"
            android:layout_width="@dimen/add_contact_photo_size"
            android:layout_height="@dimen/add_contact_photo_size"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@+id/glEndPhotoArea"
            app:layout_constraintEnd_toEndOf="@+id/photoAreaBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/photoAreaBackground" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:clickable="false"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserPhoto"
            app:layout_constraintEnd_toEndOf="@+id/photoAreaBackground"
            app:layout_constraintStart_toEndOf="@+id/ivUserPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivUserPhoto" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEndPhotoArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.25"
            app:layout_constraintTop_toBottomOf="@+id/photoAreaBackground" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Edit profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUsername"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_username"
            app:layout_constraintTop_toBottomOf="@+id/glEndPhotoArea">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_username_example" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCareer"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_career"
            app:layout_constraintTop_toBottomOf="@+id/tiUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCareer"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_career_example" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPhone"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_phone"
            app:layout_constraintTop_toBottomOf="@+id/tiCareer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_phone_example"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiAddress"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_address"
            app:layout_constraintTop_toBottomOf="@+id/tiPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiBirthDate"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_date_of_birth"
            app:layout_constraintBottom_toTopOf="@+id/tiInstagram"
            app:layout_constraintTop_toBottomOf="@+id/tiAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthDate"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiInstagram"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_instagram"
            app:layout_constraintBottom_toTopOf="@+id/tiLinkedin"
            app:layout_constraintTop_toBottomOf="@+id/tiBirthDate"
            tools:layout_editor_absoluteX="190dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInstagram"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_socials_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLinkedin"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_linkedin"
            app:layout_constraintBottom_toTopOf="@+id/tiTwitter"
            app:layout_constraintTop_toBottomOf="@+id/tiInstagram">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLinkedin"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_socials_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiTwitter"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_twitter"
            app:layout_constraintBottom_toTopOf="@+id/tiFacebook"
            app:layout_constraintTop_toBottomOf="@+id/tiLinkedin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTwitter"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_socials_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiFacebook"
            style="@style/TextInputEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_facebook"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/tiTwitter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFacebook"
                style="@style/Bordered.TransparentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_socials_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/BigButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/add_contact_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>