<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".presentation.ui.authorization.login.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHello"
        style="@style/WrapContent.Bordered.White"
        android:text="@string/login_label"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle"
        style="@style/WrapContent.Bordered.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        app:layout_constraintEnd_toEndOf="@id/tvHello"
        app:layout_constraintStart_toStartOf="@+id/tvHello"
        app:layout_constraintTop_toBottomOf="@+id/tvHello" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:theme="@style/InputTheme"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPass"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:theme="@style/InputTheme"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        style="@style/WrapContent.Gray"
        android:buttonTint="@color/white"
        android:text="@string/auth_remember_me"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/tvForgotPass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/tiPass"
        app:layout_constraintTop_toBottomOf="@+id/tiPass"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPass"
        style="@style/WrapContent.Bordered.White"
        android:text="@string/login_forgot_pass"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/cbRememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbRememberMe"
        app:layout_constraintTop_toTopOf="@+id/cbRememberMe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/BigOutlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@+id/tvNoAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberMe" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNoAccount"
        style="@style/WrapContent.Bordered.Gray"
        android:text="@string/login_no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegister"
        style="@style/WrapContent.Bordered.White"
        android:text="@string/login_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNoAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>